--- a/main-app/src/components/OrdersForm/components/Home.css
+++ b/main-app/src/components/OrdersForm/components/Home.css
@@ -44,7 +44,7 @@ h1 {
 }
 
 .black { color: #000; }
-.orange { color: #ff6600; background-color: #fff9f2; }
+.orange { color: #ff6600; }
 .purple { color: #6a0dad; }
 
 .products-grid {
