--- a/main-app/src/components/OrdersForm/App.css
+++ b/main-app/src/components/OrdersForm/App.css
@@ -7,15 +7,9 @@
   height: 100%;
 }
 
-body {
-  margin: 0;
-  padding: 0;
-  padding-top: 0 !important;
-}
-
-html {
-  margin: 0;
-  padding: 0;
+html, body {
+  margin: 0 !important;
+  padding: 0 !important;
 }
 
 * {
